# clipper-gui

./: .gitignore  .prettierrc.json  README.md  app-icon.xcf  index.html  package.json  vite.config.ts
.github/workflows/: build.yml
src/: StatesContext.ts  main.tsx  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/classes/: InputController.ts
src/components/: App.tsx  Button.tsx  Checkbox.tsx  Input.tsx  InputSegment.tsx  Inputs.tsx  KeybindHint.tsx  Options.tsx  OptionsMore.tsx  RenderButton.tsx  SideInput.tsx  SideInputs.tsx  SideRender.tsx  SideRenders.tsx  Video.tsx  index.ts
src/components/Input/: Input.tsx  InputSegment.tsx  InputSegments.tsx  InputTracks.tsx  InputVideo.tsx
src/contexts/: EncoderState.tsx  InputState.tsx  InputsState.tsx  Options.tsx  Output.tsx  RendersState.tsx  index.ts
src/functions/: clipper.ts  formatSeconds.ts  generateClipperArgs.ts  seconds.ts
src/icons/: Add.tsx  Cancel.tsx  CheckboxBlank.tsx  CheckboxMarked.tsx  Delete.tsx  Edit.tsx  MenuClose.tsx  MenuOpen.tsx  Play.tsx  RayEnd.tsx  RayStart.tsx  Video.tsx  VideoVintage.tsx  index.ts
